# forza-telemetry-console

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: build-images.yml  helm-validate.yml  integration-smoke.yml  lint-and-test.yml  security.yml
apps/overlay/: Dockerfile  index.html  package.json
apps/overlay/src/: main.tsx
apps/web/: Dockerfile  eslint.config.js  index.html  package.json
apps/web/src/: main.tsx  styles.css
docs/: changelog.md
docs/adr/: 0001-monorepo-and-service-boundaries.md
docs/api/: README.md  service-endpoints.md  web-routes.md
docs/architecture/: overview.md
docs/prd/: forza_telemetry_console_prd.md
docs/runbooks/: local-development.md
infra/scripts/: bootstrap_local.sh
services/analytics-service/: Dockerfile  README.md  pyproject.toml
services/device-gateway/: Dockerfile  README.md  pyproject.toml
services/session-service/: Dockerfile  README.md  pyproject.toml
services/telemetry-ingest/: Dockerfile  README.md  pyproject.toml
services/telemetry-ingest/src/telemetry_ingest/: config.py  ingest_runtime.py  main.py
services/telemetry-ingest/tests/: test_telemetry_ingest_health.py
services/telemetry-stream/: Dockerfile  README.md  pyproject.toml
services/telemetry-stream/src/telemetry_stream/: config.py  consumer.py  hub.py  main.py  ring_buffer.py
services/telemetry-stream/tests/: test_stream_buffer.py  test_telemetry_stream_health.py
(+34 files in other folders)
